[metadata]
name = faucetapps
summary = Faucetapps are a set of applications that work with FaucetSDN Controller.
license = Apache-2
author = Faucet development team
author-email = faucet-dev@list.waikato.ac.nz
home-page = http://faucetsdn.org
description-file = README.rst
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Operating System :: Unix
keywords =
    openflow
    openvswitch
    ryu
    faucet
    sdn
    couchdb
    couchapp

[files]
packages =
    faucetapps

[options]
include_package_data = True
